--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-averyanova_v2",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "first project",
   "main": "dist/index.js",
   "scripts": {
@@ -28,5 +28,8 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.9"
   }
 }
