--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   ],
   "bin": {
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js"
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "repository": {
     "type": "git",
