--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-averyanova_v2",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "first project",
   "main": "dist/index.js",
   "scripts": {
@@ -15,7 +15,8 @@
   ],
   "bin": {
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
   },
   "repository": {
     "type": "git",
