--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-averyanova_v2",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "description": "first project",
   "main": "dist/index.js",
   "scripts": {
@@ -16,7 +16,8 @@
   "bin": {
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js"
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-balance": "dist/bin/brain-balance.js"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "hexlet-pairs": "^1.0.7",
+    "lodash": "^4.17.10",
     "mathjs": "^4.4.2",
     "readline-sync": "^1.4.9"
   }
